--- a/projeto-angular-1/src/index.html
+++ b/projeto-angular-1/src/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/materialize/
+1.0.0/css/materialize.min.css"
+>
+<!-- Compiled and minified JavaScript -->
+<script
+src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0
+/js/materialize.min.js"></script>
 </body>
 </html>
